Update Assignment 3 CS224n

--- a/cs224n/assignment 2/latex/q1.tex
+++ b/cs224n/assignment 2/latex/q1.tex
@@ -81,8 +81,9 @@ Prove that the naive-softmax loss (Equation \ref{naive-softmax}) is the same as 
     = \dfrac{\partial}{\partial v_c} [-log \dfrac{exp(u_o^T v_c)}{\sum_{w \in Vocab}exp(u_w^T v_c)}] \)
     \newline \( = \dfrac{\partial}{\partial v_c} [-log(exp(u_o^T v_c)) + log(\sum_{w \in Vocab}exp(u_w^T v_c))] \)
     \newline \( = \dfrac{\partial}{\partial v_c} [log(\sum_{w \in Vocab}exp(u_w^T v_c)) - u_o^T v_c] \)
-    \newline \( = \sum_{x \in Vocab} \dfrac{exp(u_x^T v_c) u_x }{\sum_{w \in Vocab} exp(u_w^T v_c)} - u_o\)
-    \newline \( = \sum_{x \in Vocab} P(O = x|C = c)u_x - u_o \)
+    \newline \( = \sum_{x \in Vocab} \dfrac{exp(u_x^T v_c) u_w }{\sum_{w \in Vocab} exp(u_w^T v_c)} - u_o\)
+    \newline \( = \sum_{x \in Vocab} P(O = x|C = c)u_w - u_o \)
+    \newline $ = \E{[u_w]} - u_o $
     \newline \( = U(\hat{y} - y) \)
     \newline QUESTION II. \( \hat{y} = y \) (The model can make perfect prediction on outside words o from center word c)
     \newline QUESTION III. Subtracting this graident from \(v_c\) help minimize the loss function. (negative partial derivative values point toward minima)
@@ -95,7 +96,7 @@ In many downstream applications using word embeddings, L2 normalized vectors (e.
 
 \ifans{
     \newline In the case of a word2vec model, L2 normalization will not affect the performance of a model with large word vector dimension much.
-    \newline Meanwhiles, models with smaller word vector dimension will be affected heavily.
+    \newline Meanwhiles, models with smaller word vector dimension will be affected heavily. Since this usage of L2 normalized vectors will smooth out severely U.  
 }
 
 % Question 1-D
@@ -105,8 +106,8 @@ Compute the partial derivatives of $\bJ_{\text{naive-softmax}}(\bv_c, o, \bU)$ w
 \ifans{
     \newline \( \dfrac{\partial J_{naive-softmax}(v_c, o, U)}{\partial u_w}
     = \dfrac{\partial}{\partial u_w} [log(\sum_{w \in Vocab}exp(u_w^T v_c)) - u_o^T v_c] \)
-    \newline \( = -y_w v_c + \dfrac{ exp(u_w^T v_c) v_c}{\sum_{w \in Vocab} exp(u_w^T v_c)}\)
-    \newline \( = -y_w v_c + \hat{y}_w v_c\ = (\hat{y}_w - y_w) v_c \)
+    \newline \( = \dfrac{ exp(u_w^T v_c) v_c}{\sum_{w \in Vocab} exp(u_w^T v_c)} - y_w v_c \)
+    \newline \( = \hat{y}_w v_c\ - y_w v_c = (\hat{y}_w - y_w) v_c \)
     \newline where \( y_w = 
         \begin{cases}
             1 & w = o\\
@@ -120,9 +121,13 @@ Compute the partial derivatives of $\bJ_{\text{naive-softmax}}(\bv_c, o, \bU)$ w
 Write down the partial derivative of $\bJ_{\text{naive-softmax}}(\bv_c, o, \bU)$ with respect to $\bU$. Please break down your answer in terms of the column vectors $\frac{\partial \bJ(\bv_c, o, \bU)}{\partial \bu_1}$, $\frac{\partial \bJ(\bv_c, o, \bU)}{\partial \bu_2}$, $\cdots$, $\frac{\partial \bJ(\bv_c, o, \bU)}{\partial \bu_{|\text{Vocab}|}}$. No derivations are necessary, just an answer in the form of a matrix.
 
 \ifans {
-    \newline \( \dfrac{\partial J_{naive-softmax}(v_c, o, U)}{\partial U} = \begin{bmatrix} \hat{y}_1 v_c & \hat{y}_2 v_c & ... & \hat{y}_o v_c - v_c & ... & \hat{y}_{|Vocab|} v_c\end{bmatrix} \)
-    \newline \(=  v_c \hat{y}^T - v_c y^T\)
-    \newline \(= v_c (\hat{y} - y)^T\)
+    \newline \( \dfrac{\partial J_{naive-softmax}(v_c, o, U)}{\partial u_w} = (\hat{y}_w - y_w) v_c \)
+    \newline Therefore: $ \dfrac{\partial J_{naive-softmax}(v_c, o, U)}{\partial U} $
+    \newline \( = \begin{bmatrix} \hat{y}_1 v_c & \hat{y}_2 v_c & ... & \hat{y}_o v_c - v_c & ... & \hat{y}_{|Vocab|} v_c\end{bmatrix} \)
+
+
+    
 }
+
 
 \end{parts}
