Update All Assignments CS224n

--- a/cs224n/assignment 1/exploring_word_vectors.ipynb
+++ b/cs224n/assignment 1/exploring_word_vectors.ipynb
@@ -1176,7 +1176,7 @@
     "id": "PeIHjTFMSSuV"
    },
    "source": [
-    "#### <font color=\"red\">This counter-intuitive result happens since some words are way more popular than the others. dark vs illumination)</font>"
+    "#### <font color=\"red\">This counter-intuitive result happens since some words are way more popular than the others. dark vs illumination</font>"
    ]
   },
   {
