--- a/cs224n/assignment 3/latex/q1.tex
+++ b/cs224n/assignment 3/latex/q1.tex
@@ -197,7 +197,7 @@ sh run.sh test
     \subpart[2] Explain one advantage and one disadvantage of \textit{additive attention} compared to multiplicative attention.
     \end{subparts}
     \textcolor{Red} {
-        Dot Product Attention: more computational efficient but does not allow learning from multiple weights (limit in capturing patterns).
-        \newline Additive Attention: learn weights for different set of weights but is more expensive to compute.
+        Dot Product Attention: more computationally efficient but does not allow learning from multiple weights (limit in capturing patterns).
+        \newline Additive Attention: learn weights for different sets of weights but it is more expensive to compute.
     }
 \end{parts}
