--- a/cs224n/assignment 4/latex/q_math.tex
+++ b/cs224n/assignment 4/latex/q_math.tex
@@ -46,9 +46,9 @@ Assume that (1) all key vectors are orthogonal, so $k_i^\top k_j = 0$ for all $i
 \textbf{Find an expression} for a query vector $q$ such that $c \approx \frac{1}{2}(v_a + v_b)$, and \textbf{justify your answer}.\footnote{Hint: while the softmax function will never \textit{exactly} average the two vectors, you can get close by using a large scalar multiple in the expression.} (Recall what you learned in part~(\ref{copying}).)
 
 \ifans{
-    \newline $ c \approx \dfrac{1}{2}(v_a + v_b) \Rightarrow \alpha_a = \alpha_b = \dfrac{1}{2} $
-    \newline This means: $ k_a^T q = k_b^T q \gg k_i^T q \; \forall i \neq a, b $
-    \newline With $ k_a^T q = k_b^T q = \beta, \; \alpha_a = \alpha_b \approx \dfrac{exp(\beta)}{2exp(\beta)} $
+    \newline Since we want to incorporate information from two vectors: $ k_a^T q = k_b^T q \gg k_i^T q \; \forall i \neq a, b $
+    \newline With $ c = \sum v_i \alpha_i = v_a \alpha_a + v_b \alpha_b \approx \dfrac{1}{2}(v_a + v_b)$
+    \newline Consider $ k_a^T q = k_b^T q = \beta, \; \alpha_a = \alpha_b \approx \dfrac{exp(\beta)}{2exp(\beta)} $
     \newline For $ \beta \gg 0 \Rightarrow exp(\beta) \to \infty \Rightarrow \alpha_a = \alpha_b \approx \dfrac{exp(\beta)}{2 exp(\beta)} = \dfrac{1}{2} $
     \newline So: $ q = 2\beta (k_a + k_b) \approx \beta (k_a + k_b)$ with $ \beta \gg 0 $
     }
@@ -66,8 +66,8 @@ Further, assume that the means $\mu_i$ are all perpendicular; $\mu_i^\top \mu_j 
 Design a query $q$ in terms of the $\mu_i$ such that as before, $c\approx \frac{1}{2}(v_a + v_b)$, and provide a brief argument as to why it works.
 
 \ifans{
-    \newline Since $ \alpha $ is vanishingly small, covariance matrices (diagonal) is vanishingly small also, and $ k_i \approx u_i $
-    \newline Besides that, we assume that the means $ \mu_i $ are all perpendicular; so the results is similar to solution (b).
+    \newline Since $ \alpha $ is vanishingly small, covariance matrices (diagonal) are vanishingly small also, and $ k_i \approx u_i $
+    \newline Besides that, we assume that the means $ \mu_i $ are all perpendicular; so the results are similar to solution (b).
 }
 
 \subpart[3] Though single-headed attention is resistant to small perturbations in the keys, some types of larger perturbations may pose a bigger issue. In some cases, one key vector $k_a$ may be larger or smaller in norm than the others, while still pointing in the same direction as $\mu_a$.\footnote{Unlike the original Transformer, newer Transformer models apply layer normalization before attention. In these pre-layernorm models, norms of keys cannot be too different which makes the situation in this question less likely to occur.}
@@ -86,8 +86,8 @@ When you sample $\{k_1,\dots,k_n\}$ multiple times, and use the $q$ vector that 
 \ifans{
     \newline We have $ \mu_i^T \mu_i = 1 $ and $ \alpha $ is vanishingly small
     $ \Rightarrow \sum_a = \alpha I + \dfrac{1}{2} (\mu_a \mu_a^T) \approx \dfrac{1}{2} \Rightarrow k_a \in [0.5 \mu_a, 1.5 \mu_a ]$
-    \newline So: $ k_a = \gamma \mu_a $ where $ \mu \backsim N(1, 0.5) $ and $ k_i = \mu_i, \; \forall i \neq a $
-    \newline We have: $ k_a^T q \approx \gamma \beta , \; \beta \gg 0 $, $ k_b^T q \approx \beta , \; \beta \gg 0 $, and $ k_i^T q \approx 0 $
+    \newline So: $ k_a = \gamma \mu_a $ where $ \mu_a \backsim N(1, 0.5) $ 
+    \newline We have: $ k_a^T q \approx \gamma \beta , \; \beta \gg 0 $, $ k_b^T q \approx \beta , \; \beta \gg 0 $, and $ k_i^T q \approx 0 $ (Question 1.b)
     \newline $ \alpha_a = \dfrac{exp(\gamma \beta)}{exp(\gamma \beta) + exp(\beta)} = \dfrac{1}{1+exp(\beta(1 - \gamma))} $
     \newline $ \alpha_b = \dfrac{exp(\beta)}{exp(\gamma \beta) + exp(\beta)} = \dfrac{1}{1 + exp(\beta (\gamma - 1))} $
     \newline With $ \gamma \to 0.5 $ and $ \beta \gg 0 $, : $\alpha_a \approx 0 $ while $\alpha_b \approx 1$
