--- a/cs224n/assignment 3/latex/q2.tex
+++ b/cs224n/assignment 3/latex/q2.tex
@@ -8,7 +8,7 @@
     \textcolor{Red} {
         \newline This allows the model to capture local dependencies and patterns among the character sequences.
         Each character (in Chinese) is either a word or a morpheme in a word, so the convolutional layer can identify the information around the word to predict it.
-        Using a convolutional layer like this will help with predicting word unseen previously in the dictionary.
+        Using a convolutional layer like this will help with predicting words unseen previously in the dictionary.
     }
 
     \part[8] Here we present a series of errors we found in the outputs of our NMT model (which is the same as the one you just trained). For each example of a reference (i.e., `gold') English translation, and NMT (i.e., `model') English translation, please:
@@ -27,14 +27,14 @@
         \textbf{Reference Translation:} \textit{\underline{the culprits were} subsequently arrested and convicted.}\newline
         \textbf{NMT Translation:} \textit{\underline{the culprit was} subsequently arrested and sentenced to theft.}
         
-        \textcolor{Red} {The model mistranslates singular vs plural form. Make sure the number of singular and plural nouns in the training data are balanced.}
+        \textcolor{Red} {The model mistranslates the singular vs plural form. Make sure the number of singular and plural nouns in the training data are balanced.}
 
         \subpart[2]
         \textbf{Source Sentence}: 几乎已经没有地方容纳这些人,资源已经用尽。\newline
         \textbf{Reference Translation}: \textit{there is almost no space to accommodate these people, and resources have run out.   }\newline
         \textbf{NMT Translation}: \textit{the resources have been exhausted and \underline{resources have been exhausted}.}
         
-        \textcolor{Red} {The model duplicates the phrase "the resources have been exhausted". Adjust the mechanism to better fir the grammar.}
+        \textcolor{Red} {The model duplicates the phrase "the resources have been exhausted". Adjust the mechanism to better fit the grammar.}
 
         \subpart[2]
         \textbf{Source Sentence}: 当局已经宣布今天是国殇日。 \newline
@@ -48,7 +48,7 @@
         \textbf{Reference Translation:} \textit{\underline{`` act not, err not "}, so a saying goes.}\newline
         \textbf{NMT Translation:} \textit{as the saying goes, \underline{`` it's not wrong. "}}
         
-        \textcolor{Red} {The model misses half of the meaning of the original Chinese idiom. Include special grammar structures (such as idioms) in the train dataset.}
+        \textcolor{Red} {The model misses half of the meaning of the original Chinese idiom. Include special grammar structures (such as idioms) in the training dataset.}
     \end{subparts}
 
 
@@ -116,15 +116,15 @@
         \subpart[2] Due to data availability, NMT systems are often evaluated with respect to only a single reference translation. Please explain (in a few sentences) why this may be problematic. In your explanation, discuss how the BLEU score metric assesses the quality of NMT translations when there are multiple reference transitions versus a single reference translation.
         
         \textcolor{Red} {
-            A single translation for reference will not be able to fully capture the original sentence, thus making evaluation wrongful.
-            But with more references, the score will take into account the variability and diversity of the target language and reduce bias.
+            A single translation for reference will not be able to fully capture the original sentence, thus making the evaluation wrongful.
+            However, with more references, the score will take into account the variability and diversity of the target language and reduce bias.
         }
         
         \subpart[2] List two advantages and two disadvantages of BLEU, compared to human evaluation, as an evaluation metric for Machine Translation. 
 
         \textcolor{Red} {
-            BLEU provide an objective and "calculatable" measure for translation grading while being scalable for large sentences.
-            Meanwhiles, it does not capture fluency, coherence, or expression of the original data and can assign high score to unfaithful translations. 
+            BLEU provides an objective and "calculatable" measure for translation grading while being scalable for large sentences.
+            Meanwhile, it does not capture fluency, coherence, or expression of the original data and can assign high scores to unfaithful translations. 
         }
         
     \end{subparts}
