--- a/cs224n/assignment 4/latex/q_pos_enc.tex
+++ b/cs224n/assignment 4/latex/q_pos_enc.tex
@@ -34,11 +34,16 @@ where $\mathbf{W}_1, \mathbf{W}_2 \in \mathbb{R}^{d \times d}$ and $\mathbf{b}_1
         You are given that for any permutation matrix $\mathbf{P}$ and any matrix $\mathbf{A}$, the following hold:
         $\text{softmax}(\mathbf{P}\mathbf{A}\mathbf{P}^{\top}) = \mathbf{P}\ \text{softmax}(\mathbf{A})\ \mathbf{P}^{\top} \quad \text{and}\quad \text{ReLU}(\mathbf{P}\mathbf{A}) = \mathbf{P}\ \text{ReLU}(\mathbf{A})$.
 
-        \ifans{}
+        \ifans{
+            \newline $ H_{perm} = softmax(\dfrac{PQ (PK)^T}{\sqrt{d} }) PV = PH $
+            \newline $ Z_{perm} = ReLU(P H W_1 + l b_1)W_2 + l b_2  = PZ $
+        }
 
         \subpart[1] Think about the implications of the result you derived in part i. \textbf{Explain} why this property of the Transformer model could be problematic when processing text.
 
-        \ifans{}
+        \ifans{
+            \newline Using a permutation matrix P with input X when building position embeddings in transformers leads to the model position context based purely on P, not capturing all the possible meanings.
+        }
     \end{subparts}
 
     \part[2] \textbf{Position embeddings} are vectors that encode the position of each token in the sequence. They are added to the input word embeddings before feeding them into the Transformer.
@@ -58,10 +63,15 @@ where $\mathbf{W}_1, \mathbf{W}_2 \in \mathbb{R}^{d \times d}$ and $\mathbf{b}_1
     \begin{subparts}
         \subpart[1] Do you think the position embeddings will help the issue you identified in part (a)? If yes, explain how and if not, explain why not.
 
-        \ifans{}
+        \ifans{
+            \newline No, since it still doesn't capture all the possible positional meanings of the input. Though the fixed function can be tuned for better results.
+        }
         \subpart[1] Can the position embeddings for two different tokens in the input sequence be the same? If yes, provide an example. If not, explain why not.
 
-        \ifans{}
+        \ifans{
+            \newline No, since the position embeddings are generated using sine and cosine functions that depend on the position t of the token within the sequence. 
+            \newline These trigonometric functions ensure that each position t generates a unique embedding across the different dimensions i.
+        }
     \end{subparts}
 \end{parts}
 
