--- a/cs224n/project/decoder/finetune.ipynb
+++ b/cs224n/project/decoder/finetune.ipynb
@@ -2,53 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from datasets import load_dataset\n",
-    "\n",
-    "def create_conversation(sample):\n",
-    "    system_message = \"\"\n",
-    "\n",
-    "    if sample[\"messages\"][0][\"role\"] == \"system\":\n",
-    "        return sample\n",
-    "    else:\n",
-    "        sample[\"messages\"] = [{\"role\": \"system\", \"content\": system_message}] + sample[\"messages\"]\n",
-    "        return sample\n",
-    "    \n",
-    "dataset = load_dataset(\"HuggingFaceH4/no_robots\")\n",
-    "\n",
-    "columns_to_remove = list(dataset[\"train\"].featurers)\n",
-    "columns_to_remove.remove(\"messages\")\n",
-    "dataset = dataset.map(create_conversation, remove_columns=columns_to_remove, batched=False)\n",
-    "\n",
-    "dataset[\"train\"] = dataset[\"train\"].filter(lambda x: len(x[\"messages\"][1:]) % 2 == 0)\n",
-    "dataset[\"test\"] = dataset[\"test\"].filter(lambda x: len(x[\"messages\"][1:]) % 2 == 0)\n",
-    "\n",
-    "dataset[\"train\"].to_json(\"train_dataset.json\", orient=\"records\", force_ascii=False)\n",
-    "dataset[\"test\"].to_json(\"test_dataset.json\", orient=\"records\", force_ascii=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import gc\n",
+    "import os\n",
+    "\n",
     "import torch\n",
-    "from peft import AutoPeftModelForCausalLM\n",
-    "from transformers import AutoTokenizer\n",
-    "\n",
-    "peft_model_id = \"./llama-3-8b-hf-no-robot\"\n",
-    "\n",
-    "model = AutoPeftModelForCausalLM.from_pretrained(\n",
-    "    peft_model_id,\n",
-    "    torch_dtype=torch.float16,\n",
-    "    quantization_config={\"load_in_4bit\": True},\n",
-    "    device_map=\"auto\"\n",
-    ")\n",
-    "tokenizer = AutoTokenizer.from_pretrained(peft_model_id)"
+    "from datasets import load_dataset\n",
+    "from peft import LoraConfig, PeftModel, prepare_model_for_kbit_training\n",
+    "from transformers import AutoModelForCausalLM, AutoTokenizer, BitsAndBytesConfig, TrainingArguments, pipeline\n",
+    "from trl import ORPOConfig, ORPOTrainer, setup_chat_format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if torch.cuda.get_device_capability()[0] >= 8:\n",
+    "    attn_implementation = \"flash_attention_2\"\n",
+    "    torch_dtype = torch.bfloat16\n",
+    "else:\n",
+    "    attn_implementation = \"eager\"\n",
+    "    torch_dtype = torch.float16"
    ]
   },
   {
@@ -56,7 +35,125 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "base_model = \"meta-llama/Meta-Llama-3-8B\"\n",
+    "new_model = \"Venomsnaker/opro-llama-3-8B\"\n",
+    "\n",
+    "bnb_config = BitsAndBytesConfig(\n",
+    "    load_in_4bit=True,\n",
+    "    bnb_4bit_quant_type=\"nf4\",\n",
+    "    bnb_4bit_compute_dtype=torch_dtype,\n",
+    "    bnb_4bit_use_double_quant=True,\n",
+    ")\n",
+    "\n",
+    "peft_config = LoraConfig(\n",
+    "    r=16,\n",
+    "    lora_alpha=32,\n",
+    "    lora_dropout=0.05,\n",
+    "    bias=\"none\",\n",
+    "    task_type=\"CAUSAL_LM\",\n",
+    "    target_modules=['up_proj', 'down_proj', 'gate_proj', 'k_proj', 'q_proj', 'v_proj', 'o_proj']\n",
+    ")\n",
+    "\n",
+    "tokenizer = AutoTokenizer.from_pretrained(base_model)\n",
+    "\n",
+    "model = AutoModelForCausalLM.from_pretrained(\n",
+    "    base_model,\n",
+    "    quantization_config=bnb_config,\n",
+    "    device_map=\"auto\",\n",
+    "    attn_implementation=attn_implementation\n",
+    ")\n",
+    "\n",
+    "model, tokenizer = setup_chat_format(model, tokenizer)\n",
+    "model = prepare_model_for_kbit_training(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_name = \"mlabonne/orpo-dpo-mix-40k\"\n",
+    "dataset = load_dataset(dataset_name, split=\"all\")\n",
+    "dataset = dataset.shuffle(seed=42).select(range(1000))\n",
+    "\n",
+    "def format_chat_template(row):\n",
+    "    row[\"chosen\"] = tokenizer.apply_chat_template(row[\"chosen\"], tokenize=False)\n",
+    "    row[\"rejected\"] = tokenizer.apply_chat_template(row[\"rejected\"], tokenize=False)\n",
+    "    return row\n",
+    "\n",
+    "dataset = dataset.map(\n",
+    "    format_chat_template,\n",
+    "    num_proc=os.cpu_count()\n",
+    ")\n",
+    "\n",
+    "dataset = dataset.train_test_split(test_size=0.01)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "orpo_args = ORPOConfig(\n",
+    "    learning_rate=8e-6,\n",
+    "    beta=0.1,\n",
+    "    lr_scheduler_type=\"linear\",\n",
+    "    max_length=1024,\n",
+    "    max_prompt_length=512,\n",
+    "    per_device_train_batch_size=2,\n",
+    "    per_device_eval_batch_size=2,\n",
+    "    gradient_accumulation_steps=4,\n",
+    "    optim=\"paged_adamw_8bit\",\n",
+    "    num_train_epochs=1,\n",
+    "    evaluation_strategy=\"steps\",\n",
+    "    eval_steps=0.2,\n",
+    "    logging_steps=1,\n",
+    "    warmup_steps=10,\n",
+    "    output_dir=\"./results/\",\n",
+    ")\n",
+    "\n",
+    "trainer = ORPOTrainer(\n",
+    "    model=model,\n",
+    "    args=orpo_args,\n",
+    "    train_dataset=dataset[\"train\"],\n",
+    "    eval_dataset=dataset[\"test\"],\n",
+    "    peft_config=peft_config,\n",
+    "    tokenizer=tokenizer,\n",
+    ")\n",
+    "\n",
+    "trainer.train()\n",
+    "trainer.save_model(new_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del trainer, model\n",
+    "gc.collect()\n",
+    "torch.cuda.empty_cache()\n",
+    "\n",
+    "tokenizer = AutoTokenizer.from_pretrained(base_model)\n",
+    "model = AutoModelForCausalLM.from_pretrained(\n",
+    "    base_model,\n",
+    "    low_cpu_mem_usage=True,\n",
+    "    return_dict=True,\n",
+    "    torch_dtype=torch.float16,\n",
+    "    device_map=\"auto\",\n",
+    ")\n",
+    "model, tokenizer = setup_chat_format(model, tokenizer)\n",
+    "\n",
+    "model = PeftModel.from_pretrained(model, new_model)\n",
+    "model = model.merge_and_unload()\n",
+    "\n",
+    "model.push_to_hub(new_model, use_temp_dir=False)\n",
+    "tokenizer.push_to_hub(new_model, use_temp_dir=False)"
+   ]
   }
  ],
  "metadata": {
