--- a/general/stemming/main.ipynb
+++ b/general/stemming/main.ipynb
@@ -40,10 +40,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[The, bats, saw, the, cats, with, best, stripes, hanging, upside, down, by, their, feet]\n",
+      "the bat see the cat with good stripe hang upside down by their foot\n"
+     ]
+    }
+   ],
+   "source": [
+    "import spacy\n",
+    "nlp = spacy.load('en_core_web_sm')\n",
+    "doc = nlp(u'The bats saw the cats with best stripes hanging upside down by their feet')\n",
+    "\n",
+    "tokens = []\n",
+    "for token in doc:\n",
+    "    tokens.append(token)\n",
+    " \n",
+    "print(tokens)\n",
+    "lemmatized_sentence = \" \".join([token.lemma_ for token in doc])\n",
+    "print(lemmatized_sentence)"
+   ]
   }
  ],
  "metadata": {
