--- a/general/constituency-parsing.ipynb
+++ b/general/constituency-parsing.ipynb
@@ -9,13 +9,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-07-28 22:33:39 INFO: Checking for updates to resources.json in case models have been updated.  Note: this behavior can be turned off with download_method=None or download_method=DownloadMethod.REUSE_RESOURCES\n"
+      "2024-08-05 07:59:23 INFO: Checking for updates to resources.json in case models have been updated.  Note: this behavior can be turned off with download_method=None or download_method=DownloadMethod.REUSE_RESOURCES\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "292890cff16d489eb729485df3c0e4dd",
+       "model_id": "73ee416fce5f43b5a0e98bc2d3e30462",
        "version_major": 2,
        "version_minor": 0
       },
@@ -30,9 +30,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-07-28 22:33:41 INFO: Downloaded file to C:\\Users\\ADMIN\\stanza_resources\\resources.json\n",
-      "2024-07-28 22:33:41 WARNING: Language en package default expects mwt, which has been added\n",
-      "2024-07-28 22:33:41 INFO: Loading these models for language: en (English):\n",
+      "2024-08-05 07:59:23 INFO: Downloaded file to C:\\Users\\ADMIN\\stanza_resources\\resources.json\n",
+      "2024-08-05 07:59:23 WARNING: Language en package default expects mwt, which has been added\n",
+      "2024-08-05 07:59:24 INFO: Loading these models for language: en (English):\n",
       "======================================\n",
       "| Processor    | Package             |\n",
       "--------------------------------------\n",
@@ -42,27 +42,28 @@
       "| constituency | ptb3-revised_charlm |\n",
       "======================================\n",
       "\n",
-      "2024-07-28 22:33:41 INFO: Using device: cuda\n",
-      "2024-07-28 22:33:41 INFO: Loading: tokenize\n",
-      "2024-07-28 22:33:42 INFO: Loading: mwt\n",
-      "2024-07-28 22:33:42 INFO: Loading: pos\n",
-      "2024-07-28 22:33:42 INFO: Loading: constituency\n",
-      "2024-07-28 22:33:42 INFO: Done loading processors!\n"
+      "2024-08-05 07:59:24 INFO: Using device: cuda\n",
+      "2024-08-05 07:59:24 INFO: Loading: tokenize\n",
+      "2024-08-05 07:59:25 INFO: Loading: mwt\n",
+      "2024-08-05 07:59:25 INFO: Loading: pos\n",
+      "2024-08-05 07:59:25 INFO: Loading: constituency\n",
+      "2024-08-05 07:59:25 INFO: Done loading processors!\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(ROOT (S (NP (DT The) (JJ quick) (JJ brown) (NN fox)) (VP (VBZ jumps) (PP (IN over) (NP (DT the) (JJ lazy) (NN dog))))))\n"
+      "(ROOT (S (NP (DT The) (JJ quick) (JJ brown) (NN fox)) (VP (VBZ jumps) (PP (IN over) (NP (DT the) (JJ lazy) (NN dog)))) (. .)))\n"
      ]
     }
    ],
    "source": [
     "import stanza\n",
     "\n",
-    "nlp = stanza.Pipeline(lang='en', processors='tokenize,pos,constituency')\n",
-    "doc = nlp('The quick brown fox jumps over the lazy dog')\n",
+    "nlp = stanza.Pipeline(Lang='en', processors='tokenize,pos, constituency')\n",
+    "doc = nlp('The quick brown fox jumps over the lazy dog.')\n",
+    "\n",
     "for sentence in doc.sentences:\n",
     "    print(sentence.constituency)"
    ]
@@ -71,21 +72,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'ROOT'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "tree = doc.sentences[0].constituency\n",
-    "tree.label"
+    "tree = doc.sentences[0].constituency"
    ]
   },
   {
@@ -96,10 +85,30 @@
     {
      "data": {
       "text/plain": [
-       "((S (NP (DT The) (JJ quick) (JJ brown) (NN fox)) (VP (VBZ jumps) (PP (IN over) (NP (DT the) (JJ lazy) (NN dog))))),)"
+       "'ROOT'"
       ]
      },
      "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tree.label"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((S (NP (DT The) (JJ quick) (JJ brown) (NN fox)) (VP (VBZ jumps) (PP (IN over) (NP (DT the) (JJ lazy) (NN dog)))) (. .)),)"
+      ]
+     },
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
