--- a/general/stemming.ipynb
+++ b/general/stemming.ipynb
@@ -9,15 +9,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cared to care\n",
-      "university to univers\n",
-      "fairly to fair\n",
-      "easily to easili\n",
-      "singing to sing\n",
-      "sings to sing\n",
-      "sung to sung\n",
-      "singer to singer\n",
-      "sportingly to sport\n"
+      "foxes -> fox\n",
+      "jumping -> jump\n",
+      "dogged -> dog\n"
      ]
     }
    ],
@@ -26,16 +20,14 @@
     "from nltk.stem.snowball import SnowballStemmer\n",
     "\n",
     "snow_stemmer = SnowballStemmer(language='english')\n",
-    "words = ['cared','university','fairly','easily','singing',\n",
-    "       'sings','sung','singer','sportingly']\n",
-    "\n",
+    "words = ['foxes', 'jumping', 'dogged']\n",
     "stem_words = []\n",
+    "\n",
     "for w in words:\n",
     "    x = snow_stemmer.stem(w)\n",
     "    stem_words.append(x)\n",
-    "\n",
-    "for e1, e2 in zip(words,stem_words):\n",
-    "    print(e1+' to '+e2)"
+    "for e1, e2 in zip(words, stem_words):\n",
+    "    print(e1 + \" -> \" + e2)"
    ]
   },
   {
@@ -47,22 +39,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[The, bats, saw, the, cats, with, best, stripes, hanging, upside, down, by, their, feet]\n",
-      "the bat see the cat with good stripe hang upside down by their foot\n"
+      "the quick brown fox jump over the lazy dog .\n"
      ]
     }
    ],
    "source": [
     "import spacy\n",
-    "nlp = spacy.load('en_core_web_sm')\n",
-    "doc = nlp(u'The bats saw the cats with best stripes hanging upside down by their feet')\n",
     "\n",
-    "tokens = []\n",
-    "for token in doc:\n",
-    "    tokens.append(token)\n",
-    " \n",
-    "print(tokens)\n",
-    "lemmatized_sentence = \" \".join([token.lemma_ for token in doc])\n",
+    "nlp = spacy.load('en_core_web_sm')\n",
+    "sentence = nlp(u'The quick brown fox jumps over the lazy dog.')\n",
+    "lemmatized_sentence = \" \".join([token.lemma_ for token in sentence])\n",
     "print(lemmatized_sentence)"
    ]
   }
