--- a/general/tokenization.ipynb
+++ b/general/tokenization.ipynb
@@ -4,16 +4,6 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import nltk\n",
-    "# nltk.download('punkt')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -26,14 +16,14 @@
    "source": [
     "import nltk\n",
     "\n",
-    "word_data = \"The quick brown fox jumps over the lazy dog.\"\n",
-    "nltk_tokens = nltk.word_tokenize(word_data)\n",
-    "print (nltk_tokens)"
+    "data = \"The quick brown fox jumps over the lazy dog.\"\n",
+    "tokens = nltk.word_tokenize(data)\n",
+    "print(tokens)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -48,31 +38,28 @@
     "import nltk\n",
     "\n",
     "sentence_data = \"The quick brown fox jumps over the lazy dog. How vexingly quick daft zebras jump!\"\n",
-    "nltk_tokens = nltk.sent_tokenize(sentence_data)\n",
-    "print (nltk_tokens)"
+    "tokens = nltk.sent_tokenize(sentence_data)\n",
+    "print(tokens)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['i', 'have', 'a', 'new', 'gp', '##u', '!']"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['the', 'quick', 'brown', 'fox', 'jumps', 'over', 'the', 'lazy', 'dog', '.', 'how', 've', '##xing', '##ly', 'quick', 'da', '##ft', 'zebra', '##s', 'jump', '!']\n"
+     ]
     }
    ],
    "source": [
     "from transformers import BertTokenizer\n",
     "\n",
     "tokenizer = BertTokenizer.from_pretrained(\"google-bert/bert-base-uncased\")\n",
-    "tokenizer.tokenize(\"I have a new GPU!\")"
+    "print(tokenizer.tokenize(\"The quick brown fox jumps over the lazy dog. How vexingly quick daft zebras jump!\"))"
    ]
   }
  ],
