--- a/general/word2vec.ipynb
+++ b/general/word2vec.ipynb
@@ -62,12 +62,13 @@
    "source": [
     "vocab, index = {}, 1\n",
     "vocab['<pad>'] = 0\n",
+    "\n",
     "for token in tokens:\n",
     "  if token not in vocab:\n",
     "    vocab[token] = index\n",
     "    index += 1\n",
     "vocab_size = len(vocab)\n",
-    "print(vocab)\n"
+    "print(vocab)"
    ]
   },
   {
@@ -85,7 +86,7 @@
    ],
    "source": [
     "inverse_vocab = {index: token for token, index in vocab.items()}\n",
-    "print(inverse_vocab)\n"
+    "print(inverse_vocab)"
    ]
   },
   {
@@ -103,7 +104,7 @@
    ],
    "source": [
     "example_sequence = [vocab[word] for word in tokens]\n",
-    "print(example_sequence)\n"
+    "print(example_sequence)"
    ]
   },
   {
@@ -127,7 +128,7 @@
     "      vocabulary_size=vocab_size,\n",
     "      window_size=window_size,\n",
     "      negative_samples=0)\n",
-    "print(len(positive_skip_grams))\n"
+    "print(len(positive_skip_grams))"
    ]
   },
   {
@@ -168,7 +169,6 @@
    ],
    "source": [
     "target_word, context_word = positive_skip_grams[0]\n",
-    "\n",
     "num_ns = 4\n",
     "\n",
     "context_class = tf.reshape(tf.constant(context_word, dtype=\"int64\"), (1, 1))\n",
@@ -182,7 +182,7 @@
     "    name=\"negative_sampling\"\n",
     ")\n",
     "print(negative_sampling_candidates)\n",
-    "print([inverse_vocab[index.numpy()] for index in negative_sampling_candidates])\n"
+    "print([inverse_vocab[index.numpy()] for index in negative_sampling_candidates])"
    ]
   },
   {
@@ -219,7 +219,7 @@
     "print(f\"target_word     : {inverse_vocab[target_word]}\")\n",
     "print(f\"context_indices : {context}\")\n",
     "print(f\"context_words   : {[inverse_vocab[c.numpy()] for c in context]}\")\n",
-    "print(f\"label           : {label}\")\n"
+    "print(f\"label           : {label}\")"
    ]
   },
   {
