Update Embeddings Search

--- a/ai-challenge-2024/clip-model.ipynb
+++ b/ai-challenge-2024/clip-model.ipynb
@@ -12,9 +12,9 @@
     "    return Image.open(path)\n",
     "\n",
     "img_paths = [\n",
-    "    \"data/pexels-pixabay-45201.jpg\", # cat\n",
-    "    \"data/pexels-pixabay-220938.jpg\", # dog\n",
-    "    \"data/pexels-pixabay-219998.jpg\" # beach\n",
+    "    \"data/train/African_crocodile/n01697457_85.JPEG\", # crocodile\n",
+    "    \"data/train/bullet_train/n02917067_1400.JPEG\", # bullet train\n",
+    "    \"data/train/comic_book/n06596364_3314.JPEG\" # comic books \n",
     "]\n",
     "\n",
     "images = [load_image(img) for img in img_paths]"
@@ -53,17 +53,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Text: A dog in the snow\n",
-      "Score: tensor(0.2339)\n",
-      "Path: data/pexels-pixabay-220938.jpg \n",
+      "Text: a crocodile\n",
+      "Score: tensor(0.3052)\n",
+      "Path: data/train/African_crocodile/n01697457_85.JPEG \n",
       "\n",
-      "Text: Eine Katze\n",
-      "Score: tensor(0.2635)\n",
-      "Path: data/pexels-pixabay-45201.jpg \n",
+      "Text: a bullet train\n",
+      "Score: tensor(0.2593)\n",
+      "Path: data/train/bullet_train/n02917067_1400.JPEG \n",
       "\n",
-      "Text: Una playa con palmeras.\n",
-      "Score: tensor(0.3125)\n",
-      "Path: data/pexels-pixabay-219998.jpg \n",
+      "Text: comic books.\n",
+      "Score: tensor(0.2993)\n",
+      "Path: data/train/comic_book/n06596364_3314.JPEG \n",
       "\n"
      ]
     }
@@ -79,9 +79,9 @@
     "img_embeddings = img_model.encode(images)\n",
     "\n",
     "texts = [\n",
-    "    \"A dog in the snow\",\n",
-    "    \"Eine Katze\",  # German: A cat\n",
-    "    \"Una playa con palmeras.\"  # Spanish: a beach with palm trees\n",
+    "    \"a crocodile\",\n",
+    "    \"a bullet train\",\n",
+    "    \"comic books.\"\n",
     "]\n",
     "\n",
     "text_embeddings = text_model.encode(texts)\n",
@@ -93,6 +93,13 @@
     "    print(\"Score:\", scores[max_img_idx] )\n",
     "    print(\"Path:\", img_paths[max_img_idx], \"\\n\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
