--- a/ai-challenge-2024/read-embeddings.ipynb
+++ b/ai-challenge-2024/read-embeddings.ipynb
@@ -74,7 +74,7 @@
     "def load_keyframes_map(folder_path):\n",
     "    keyframes_map = {}\n",
     "\n",
-    "    for file in Path(folder_path).glob('*csv'):\n",
+    "    for file in Path(folder_path).glob('*.csv'):\n",
     "        df = pd.read_csv(file, index_col=None, header=0)\n",
     "        file = os.path.basename(file)\n",
     "        base, extension = os.path.splitext(file)\n",
@@ -137,6 +137,19 @@
     "    print(max_score, \" - \", base)\n",
     "    print(keyframes_map[base].loc[keyframes_map[base]['n'] == max_score_keyframe_idx + 1])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "a doctor holding the patient hand, the doctor is wearing a black watch, the patient has white cloth wrap around an arm\n",
+    "a big pink fish figure with together with many other fish figures"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
